--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"@heroicons/react": "^1.0.6",
 		"next": "12.1.5",
 		"react": "18.1.0",
-		"react-dom": "18.1.0"
+		"react-dom": "18.1.0",
+		"react-infinite-scroll-component": "^6.1.0"
 	},
 	"devDependencies": {
 		"@types/node": "17.0.30",
