--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
 	},
 	"dependencies": {
 		"@heroicons/react": "^1.0.6",
+		"@types/react-infinite-scroller": "^1.2.3",
 		"next": "12.1.5",
 		"react": "18.1.0",
 		"react-dom": "18.1.0",
-		"react-infinite-scroll-component": "^6.1.0"
+		"react-infinite-scroller": "^1.2.6"
 	},
 	"devDependencies": {
 		"@types/node": "17.0.30",
