--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
 		"next": "12.1.5",
 		"react": "18.1.0",
 		"react-dom": "18.1.0",
-		"react-infinite-scroller": "^1.2.6"
+		"react-infinite-scroller": "^1.2.6",
+		"react-masonry-css": "^1.0.16",
+		"sharp": "^0.30.4"
 	},
 	"devDependencies": {
 		"@types/node": "17.0.30",
