--- a/package.json
+++ b/package.json
@@ -11,22 +11,23 @@
 	"dependencies": {
 		"@heroicons/react": "^1.0.6",
 		"@types/react-infinite-scroller": "^1.2.3",
-		"next": "12.1.6",
-		"react": "18.1.0",
-		"react-dom": "18.1.0",
+		"next": "12.2.0",
+		"next-auth": "^4.9.0",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
 		"react-infinite-scroller": "^1.2.6",
 		"react-masonry-css": "^1.0.16",
-		"sharp": "^0.30.4"
+		"sharp": "^0.30.7"
 	},
 	"devDependencies": {
-		"@types/node": "17.0.33",
-		"@types/react": "18.0.9",
-		"@types/react-dom": "18.0.4",
+		"@types/node": "18.0.3",
+		"@types/react": "18.0.15",
+		"@types/react-dom": "18.0.6",
 		"autoprefixer": "^10.4.7",
-		"eslint": "8.15.0",
-		"eslint-config-next": "12.1.6",
-		"postcss": "^8.4.13",
-		"tailwindcss": "^3.0.24",
-		"typescript": "4.6.4"
+		"eslint": "8.19.0",
+		"eslint-config-next": "12.2.0",
+		"postcss": "^8.4.14",
+		"tailwindcss": "^3.1.5",
+		"typescript": "4.7.4"
 	}
 }
