--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
 	"dependencies": {
 		"@heroicons/react": "^1.0.6",
 		"@types/react-infinite-scroller": "^1.2.3",
-		"next": "12.2.0",
-		"next-auth": "^4.9.0",
+		"next": "12.2.2",
+		"next-auth": "^4.10.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-infinite-scroller": "^1.2.6",
@@ -20,14 +20,14 @@
 		"sharp": "^0.30.7"
 	},
 	"devDependencies": {
-		"@types/node": "18.0.3",
+		"@types/node": "18.0.6",
 		"@types/react": "18.0.15",
 		"@types/react-dom": "18.0.6",
 		"autoprefixer": "^10.4.7",
-		"eslint": "8.19.0",
-		"eslint-config-next": "12.2.0",
+		"eslint": "8.20.0",
+		"eslint-config-next": "^12.2.2",
 		"postcss": "^8.4.14",
-		"tailwindcss": "^3.1.5",
+		"tailwindcss": "^3.1.6",
 		"typescript": "4.7.4"
 	}
 }
