Fixed mobile and pc issues, added additional options modal (code only)
- fixed regex for routing, some @'s which had 'me' in it would auto-route wrong (@testme would become @test@undefined)
- Shifted number formatting to it's own class
- Fixed mobile not seeing tweet/alt text button
- Added profile metrics to bottom of profile card
- Fixed richtext where @ would become a link, now using @\w+ instead of *
- Added an options modal which won't be usable soon but the foundation is there
- Modified toggleswitch to be more flexible
- Disabled tweet text hover activate on PC
- Added profile images to overlays to comply better with Twitter's design principles

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "tweet-gallery",
-	"version": "0.1.0",
+	"name": "tweebt",
+	"version": "0.2.0",
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
