--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "tweebt",
-	"version": "0.3.2",
+	"version": "0.3.4",
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
@@ -10,7 +10,7 @@
 	},
 	"dependencies": {
 		"@heroicons/react": "^1.0.6",
-		"next": "^12.2.5",
+		"next": "^12.3.0",
 		"next-auth": "^4.10.3",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
@@ -19,15 +19,15 @@
 		"sharp": "^0.31.0"
 	},
 	"devDependencies": {
-		"@types/node": "^18.7.15",
-		"@types/react": "^18.0.18",
+		"@types/node": "^18.7.18",
+		"@types/react": "^18.0.20",
 		"@types/react-dom": "18.0.6",
 		"@types/react-infinite-scroller": "^1.2.3",
-		"autoprefixer": "^10.4.8",
-		"eslint": "^8.23.0",
-		"eslint-config-next": "^12.2.5",
+		"autoprefixer": "^10.4.11",
+		"eslint": "^8.23.1",
+		"eslint-config-next": "^12.3.0",
 		"postcss": "^8.4.16",
 		"tailwindcss": "^3.1.8",
-		"typescript": "4.8.2"
+		"typescript": "^4.8.3"
 	}
 }
