--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "tweebt",
-	"version": "0.3.4",
+	"version": "0.3.6",
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@heroicons/react": "^1.0.6",
+		"moment": "^2.29.4",
 		"next": "^12.3.1",
 		"next-auth": "^4.15.0",
 		"react": "18.2.0",
