--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "tweebt",
-	"version": "0.3.6",
+	"version": "0.3.7",
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
@@ -11,7 +11,7 @@
 	"dependencies": {
 		"@heroicons/react": "^1.0.6",
 		"moment": "^2.29.4",
-		"next": "^12.3.1",
+		"next": "^13.0.0",
 		"next-auth": "^4.15.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
@@ -21,12 +21,12 @@
 	},
 	"devDependencies": {
 		"@types/node": "^18.11.5",
-		"@types/react": "^18.0.22",
-		"@types/react-dom": "18.0.6",
+		"@types/react": "^18.0.23",
+		"@types/react-dom": "^18.0.7",
 		"@types/react-infinite-scroller": "^1.2.3",
 		"autoprefixer": "^10.4.12",
 		"eslint": "^8.26.0",
-		"eslint-config-next": "^12.3.1",
+		"eslint-config-next": "^13.0.0",
 		"postcss": "^8.4.18",
 		"tailwindcss": "^3.2.1",
 		"typescript": "^4.8.4"
