--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
 	"include": [
 		"next-env.d.ts",
 		"**/*.ts",
-		"**/*.tsx"
+		"**/*.tsx",
+		"src/pages/_document.jsx"
 	],
 	"exclude": [
 		"node_modules"
