--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "tweebt",
-	"version": "0.3.9",
+	"version": "0.4.0",
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
@@ -11,24 +11,25 @@
 	"dependencies": {
 		"@heroicons/react": "^1.0.6",
 		"moment": "^2.29.4",
-		"next": "^13.0.1",
-		"next-auth": "^4.15.0",
+		"next": "^13.0.2",
+		"next-auth": "^4.16.4",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-infinite-scroller": "^1.2.6",
 		"react-masonry-css": "^1.0.16",
-		"sharp": "^0.31.1"
+		"sharp": "^0.31.2"
 	},
 	"devDependencies": {
 		"@types/node": "^18.11.9",
-		"@types/react": "^18.0.24",
+		"@types/react": "^18.0.25",
 		"@types/react-dom": "^18.0.8",
 		"@types/react-infinite-scroller": "^1.2.3",
 		"autoprefixer": "^10.4.13",
-		"eslint": "^8.26.0",
-		"eslint-config-next": "^13.0.1",
+		"eslint": "^8.27.0",
+		"eslint-config-next": "^13.0.2",
 		"postcss": "^8.4.18",
-		"tailwindcss": "^3.2.1",
+		"server-only": "^0.0.1",
+		"tailwindcss": "^3.2.2",
 		"typescript": "^4.8.4"
 	}
 }
